# Nexus

./: .gitignore  README.md  data.csv  pyproject.toml  threads.db
logs/: logs.txt
nexus/: cli.py  main.py  streamlit_main.py
nexus/api/: main.py
nexus/gradio_ui/: agents_panel.py  engine_settings_panel.py  knowledge_panel.py  main.py  thread_panel.py
nexus/nexus_base/: action_manager.py  agent_engine_manager.py  agent_manager.py  assistants_manager.py  context_variables.py  embedding_manager.py  environment_manager.py  global_values.py  knowledge_manager.py  memory_manager.py  nexus.py  nexus_models.py  planner_manager.py  profile_manager.py  prompt_template_manager.py  thought_template_manager.py  tracking_manager.py  workflow_manager.py
nexus/nexus_base/nexus_actions/: content_actions.py  date_actions.py  env_actions.py  file_actions.py  project_actions.py  search.py  search_mock.py  test_actions.py  weather.py  youtube_search.py
nexus/nexus_base/nexus_agent_engines/: anthropic_engine.py  azure_oai_engine.py  groq_engine.py  oai_engine.py
nexus/streamlit_ui/: actions.py  agent.py  agent_chat.py  agent_panel.py  assistants_chat.py  assistants_panel.py  cache.py  editor_commands.json  embeddings.py  knowledge.py  login.py  memory.py  options.py  profile.py  prompts.py  thought_templates.py  usage.py  workflow.py  workflow_logging.py
tests/: test_agent_manager.py  test_assistant_manager.py  test_code.py  test_nexus_system.py  test_planners.py  test_prompt_template_manager.py  test_thought_template_manager.py  test_tracking_manager.py
(+15 files in other folders)
